Fix dropdown menu padding on mobile

--- a/canilearntocode/common/static/css/styles.css
+++ b/canilearntocode/common/static/css/styles.css
@@ -62,6 +62,11 @@ body {
 @media (min-width: 768px) {
     .sub-navbar {
         margin-left: -20px;
+    }
+}
+
+@media (min-width: 380px) {
+    .sub-navbar {
         margin-top: 140px;
     }
 }
